# material-decoration

./: .clang-format  CMakeLists.txt  README.md
src/: BoxShadowHelper.cc  BoxShadowHelper.h  CMakeLists.txt  CloseButton.cc  CloseButton.h  Decoration.cc  Decoration.h  MaximizeButton.cc  MaximizeButton.h  MinimizeButton.cc  MinimizeButton.h  material.json  metrics.h  plugin.cc
